--- a/.vsts-ci/templates/ci-general.yml
+++ b/.vsts-ci/templates/ci-general.yml
@@ -1,43 +1,36 @@
 parameters:
-  pwsh: true
+- name: pwsh
+  type: boolean
+  default: true
 
 steps:
-  - powershell: |
-      Write-Host "Installing PowerShell Daily..."
+- pwsh: $PSVersionTable
+  displayName: PowerShell version
 
-      # Use `AGENT_TEMPDIRECTORY` to make sure the downloaded PowerShell is cleaned up.
-      $powerShellPath = Join-Path -Path $env:AGENT_TEMPDIRECTORY -ChildPath 'powershell'
-      Invoke-WebRequest -Uri https://aka.ms/install-powershell.ps1 -OutFile ./install-powershell.ps1
+- task: PowerShell@2
+  displayName: Build and test
+  inputs:
+    filePath: tools/azurePipelinesBuild.ps1
+    pwsh: ${{ parameters.pwsh }}
 
-      ./install-powershell.ps1 -Destination $powerShellPath -Daily
+# NOTE: We zip the artifacts because they're ~20 MB compressed, but ~300 MB raw,
+# and we have limited pipeline artifact storage space.
+- task: ArchiveFiles@2
+  displayName: Zip pipeline artifacts
+  inputs:
+    rootFolderOrFile: module
+    includeRootFolder: false
+    archiveType: zip
+    archiveFile: PowerShellEditorServices-Build.zip
+    verbose: true
 
-      # Using `prependpath` to update the PATH just for this build.
-      Write-Host "##vso[task.prependpath]$powerShellPath"
-    displayName: Install PowerShell Daily
-    continueOnError: true
+- publish: PowerShellEditorServices-Build.zip
+  artifact: PowerShellEditorServices-Build-$(System.JobId)
+  displayName: Publish unsigned pipeline artifacts
 
-  - pwsh: '$PSVersionTable'
-    displayName: Display PowerShell version information
-
-  - pwsh: Write-Host "##vso[build.updatebuildnumber]$env:BUILD_SOURCEBRANCHNAME-$env:BUILD_SOURCEVERSION-$((get-date).ToString("yyyyMMddhhmmss"))"
-    displayName: Set Build Name for Non-PR
-    condition: ne(variables['Build.Reason'], 'PullRequest')
-  - task: PowerShell@2
-    inputs:
-      filePath: scripts/azurePipelinesBuild.ps1
-      pwsh: ${{ parameters.pwsh }}
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: VSTest
-      testResultsFiles: '**/*.trx'
-    condition: succeededOrFailed()
-  - task: PublishTestResults@2
-    inputs:
-      testRunner: NUnit
-      testResultsFiles: '**/TestResults.xml'
-    condition: succeededOrFailed()
-  - task: PublishBuildArtifacts@1
-    inputs:
-      ArtifactName: PowerShellEditorServices-CI
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    condition: succeededOrFailed()
+- task: PublishTestResults@2
+  displayName: Publish test results
+  inputs:
+    testRunner: VSTest
+    testResultsFiles: '**/*.trx'
+  condition: succeededOrFailed()
